Bug 402578 - qqc2-desktop ScrollBars don't do pageup/pagedown when clicking in the scrollbar trough
Summary: qqc2-desktop ScrollBars don't do pageup/pagedown when clicking in the scrollb...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-qqc2-desktop-style
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2018-12-26 12:02 UTC by chimak111
Modified: 2019-10-07 02:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.56
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chimak111 2018-12-26 12:02:11 UTC
SUMMARY

Single clicking in scrollbar jumps to position, not a page up or down.

STEPS TO REPRODUCE
1. Open Discover > Applications
2. Click in the scrollbar area above or below the scrollbar "thumb".
3. 

OBSERVED RESULT
Content scrolls to the position of the click rather than just one page up or down.

EXPECTED RESULT
Other applications such as KWrite and Kate (both with show mini-map unticked),
Dolphin, and Featherpad scroll a page up or down depending on where the single click was made.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE neon 5.14
KDE Plasma Version: 5.14.4
KDE Frameworks Version: 5.53.0
Qt Version: 5.11.2

ADDITIONAL INFORMATION
This action reminds me more of gtk3 applications for which the fix to return to "legacy" scrolling, if one wants it, is to edit one's "~/.config/gtk-3.0/settings.ini" to include "gtk-primary-button-warps-slider=0".

A related, but not identical, bug filed for Plasma 5.10.5 is https://bugs.kde.org/show_bug.cgi?id=384889.
Comment 1 Nate Graham 2018-12-26 22:37:28 UTC
The scrollview comes from Kirigami; moving there.

Kirigami should respect QStyle::SH_ScrollBar_LeftClickAbsolutePosition so that it can change appropriately once we have a user-facing method of changing this in System Settings.
Comment 2 Nate Graham 2018-12-27 04:51:08 UTC
*** Bug 402079 has been marked as a duplicate of this bug. ***
Comment 3 Marco Martin 2019-02-11 09:33:24 UTC
it's a QtQuickControls style issue, nothing to do with kirigami
Comment 4 Marco Martin 2019-02-11 14:20:16 UTC
and i guess also the "scroll here/scroll up etc" popup should be shown on right click
Comment 5 Marco Martin 2019-02-11 15:00:18 UTC
Git commit 9fc67f5a71965f3d2ceb7addfdb0853be5ebba22 by Marco Martin.
Committed on 11/02/2019 at 14:57.
Pushed by mart into branch 'master'.

clicking on empty areas behaves like pgup/pgdown

clicking with middle mouse button positions absolutely

both behaviors are the same as qwidget scrollbars

M  +1    -0    kirigami-plasmadesktop-integration/plasmadesktoptheme.cpp
M  +27   -4    org.kde.desktop/ScrollBar.qml

https://commits.kde.org/qqc2-desktop-style/9fc67f5a71965f3d2ceb7addfdb0853be5ebba22
Comment 6 Nate Graham 2019-02-11 15:22:27 UTC
Thanks for the fix! Will this also automatically fix Bug 384889?

Also, can't we respect the style hint though? If we ever implement Bug 379498 and allow people to change the behavior of clicking in the scrollbar trough, then this behavior will be wrong again for people who change it via the UI.