clicking on empty areas behaves like pgup/pgdown

clicking with middle mouse button positions absolutely

both behaviors are the same as qwidget scrollbars

BUG: 402578